--- a/PetShopConsoleApp1/PetShopConsoleApp1.csproj
+++ b/PetShopConsoleApp1/PetShopConsoleApp1.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ModuloDono\" />
+    <Folder Include="ModuloPet\" />
+  </ItemGroup>
+
 </Project>
